@@ -29,4 +29,5 @@ DROP TABLE fk_test_has_pk
 DROP TABLE keyboards
 DROP TABLE legacy_things
 DROP TABLE numeric_data
+DROP TABLE schema_info
 go
